fix: update mascot link position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -579,6 +579,10 @@ textarea {
       &.navbar-item-mascot {
         opacity: 1;
         animation: none;
+
+        .navbar-link {
+          right: 240px;
+        }
       }
 
       .navbar-logo {
